create more unit tests